fixed upload page text visibilty

--- a/src/styles/Upload.css
+++ b/src/styles/Upload.css
@@ -1,4 +1,9 @@
 .upload-component {
     height: 100vh;
-    margin: 50% auto
+    margin: 50% auto;
+    color: white;
+}
+
+input {
+    color: white;
 }
